# AllOff

./: README.md  data_file.json  pyproject.toml
alloff/: alloff.py  config.json  dump_puzzle.py  level-1-standard-puzzles.json  level-2-standard-puzzles.json  level-3-standard-puzzles.json  puzzle-files.json  read_puzzle.py  standard-puzzles.json  ui.py
tests/: test_alloff.py
