[tool.poetry]
name = "alloff"
version = "0.1.0"
description = "A Python version of the Lights Out handheld game"
authors = ["Jon Fincher <jfincher42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
